@@ -249,3 +249,15 @@ Sistema de verificación de cuentas tras registro
  Próximo push
  -- Se va a implementar una vista indicando que la cuenta no está verificada
  -- Se personalizará el mail de activación de cuenta (MJML)
+
+  -------------------------
+
+11/06/2020 (Emi)
+
+Sistema verificación de cuentas tras registro
+-- Diseño y maquetado de nueva vista para verificación de mail
+-- Mail de verificación de cuenta personalizado
+
+ Próximo Push
+ -- Hacer que el sistema de verificación de mail no sea el default de laravel ya que genera conflictos 
+
